# MADNet-Research-Agent

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: demo.yml
configs/: default_config.json
data/: research_questions.json  sample_corpus.json
docs/: ARCHITECTURE.md  CASE_STUDY.md  DESIGN_CN.md  MIMO_APPLICATION_TEXT.md  PROJECT_HIGHLIGHTS.md  REPOSITORY_MAP.md  ROADMAP.md  VERIFICATION.md
examples/: sample_request.md
madnet_research_agent/: agents.py  cli.py  config.py  corpus.py  evaluation.py  exporters.py  interfaces.py  models.py  orchestrator.py  prompts.py  reporting.py  workflow.py
outputs/: example_report.md  example_summary.json  example_trace.json
tests/: test_agents.py  test_workflow.py
